# rust-latexdiff

./: ADVANCED_USAGE.md  Cargo.toml  LICENSE  Makefile  README.md  build.sh  git_latexdiff.sh
.github/workflows/: build-binaries.yml
examples/: chapter1.tex  chapter1_v2.tex  chapter2.tex  diff.tex  main_current.tex  main_v2.tex
src/: latexdiff.rs  latexpand.rs  main.rs  utils.rs
