[package]
name = "rust-latexdiff"
version = "0.2.0"
edition = "2026"

[[bin]]
name = "rust-latexdiff"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
regex = "1.10"
colored = "2.0"
walkdir = "2.4"
similar = "2.4"
anyhow = "1.0"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.0"
